# openim-rs

./: Cargo.toml  README.md
cmd/opemim-rpc/open-im-rpc-msg/: Cargo.toml
cmd/opemim-rpc/open-im-rpc-msg/src/: main.rs
cmd/openim-msg-transfer/: Cargo.toml
cmd/openim-msg-transfer/src/: main.rs
config/: batcher.yaml  kafka.yaml  mongo.yaml  nacos.yaml  openim-rpc-msg.yaml  redis.yaml  share.yaml  topics.yaml
crates/abi/: Cargo.toml
crates/abi/src/: encrypt.rs  error.rs  lib.rs
crates/abi/src/config/: mod.rs
crates/abi/src/utils/: config_util.rs  mod.rs  time_util.rs
crates/entity/: Cargo.toml
crates/entity/src/: msg.rs
crates/msg-transfer/: Cargo.toml
crates/msg-transfer/src/: lib.rs  online_history_redis_consumer_handler.rs  online_msg_to_mongo_handler.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/protos/: conversation.proto  msg.proto  sdkws.proto  wrapperspb.proto
crates/protocol/src/: lib.rs
crates/protocol/src/pb/: constant.rs  conversation_util.rs  mod.rs  msg_processor.rs  openim_conversation.rs  openim_msg.rs  openim_protobuf.rs  openim_sdkws.rs
crates/rpc/: Cargo.toml
crates/rpc/src/msg/: mod.rs  rpc.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  model.rs
crates/storage/src/cache/: mod.rs  msg.rs  redis.rs  seq_conversation.rs  seq_user.rs
crates/storage/src/cache/redis/: consts.rs  mod.rs  msg.rs  seq_conversation.rs  seq_user.rs
crates/storage/src/controller/: mod.rs  msg_transfer.rs
crates/storage/src/database/: mod.rs  msg.rs  msg_transfer.rs  seq_conversation.rs  seq_user.rs
crates/storage/src/database/mongodb/: mod.rs  msg.rs  seq_conversation.rs  seq_user.rs
crates/storage/src/database/msg/: mod.rs
crates/storage/src/msg/: mod.rs
crates/tools/: Cargo.toml
crates/tools/src/: batcher.rs  lib.rs
crates/tools/src/discover/: mod.rs  nacos.rs
crates/tools/src/mq_producer/: kafka.rs  mod.rs
docs/: 消息时序图.md
docs/drawios/: timeline.drawio
