[workspace]
members = [
    "cmd/opemim-rpc/open-im-rpc-msg",
    "crates/abi",
    "crates/protocol",
    "crates/rpc",
    "crates/storage",
    "crates/tools",
]
resolver = "2"

[workspace.dependencies]
tonic = { version = "0.12" }
tonic-build = "0.12.0"
prost = "0.13"
prost-types = "0.13"
thiserror = "1.0"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tokio = { version = "1.43" }