[package]
name = "openim-msg-transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
abi = { path = "../../crates/abi" }
tools = { path = "../../crates/tools" }
msg-transfer = { path = "../../crates/msg-transfer" }
openim-storage = { path = "../../crates/storage" }

tracing-subscriber = { workspace = true }
