[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tools = { path = "../tools" }


thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

chrono = { version = "0.4" }
rand = { version = "0.9" }
md-5 = { version = "0.10" }
bytes = { version = "1.0" }
config = { version = "0.14.0", features = ["yaml"] } 

rdkafka = { version = "0.36.2", features = ["cmake-build"] }
tokio = { workspace = true, features = ["full"] }
