[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tools = { path = "../tools" }

redis = { workspace = true, features = ["aio", "tokio-comp"]}
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
mongodb = { workspace = true }

chrono = { version = "0.4" }
rand = { version = "0.9" }
md-5 = { version = "0.10" }
bytes = { version = "1.0" }
config = { version = "0.14.0", features = ["yaml"] }